# Organisation

./: Cargo.toml  README.md  package-lock.json
.github/: FUNDING.yml
lib_employees/: Cargo.toml
lib_employees/src/: lib.rs
main_api/: Cargo.toml
main_api/src/: main.rs
main_library/: Cargo.toml
main_library/src/: employee.rs  lib.rs  person.rs
main_terminal/: Cargo.toml
main_terminal/src/: main.rs
main_web/: Cargo.toml
main_web/src/: main.rs
