[package]
name = "main_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
surrealdb = "1.1.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
